	  Affects files.c:load_open_file(), nano.c:main(), 
	  search.c:findnextstr(), winio.c:statusbar() and 
	  do_cursorpos() (David Benbennick).
	- Fix nano crashing when searching/replacing an invalid
	  regex (try "^*").  Changed regexp_init() to return 
	  1 or 0 based on regcomp()'s return value and search_init 
	  to exit with an error message (sorry Jordi!)
- cut.c:
  do_cut_text()
	- Fix incorrect cursor location when cutting long lines
	  (David Benbennick).
- files.c:
	- Set a default PATH_MAX for getcwd() etc calls (David 
	  Benbennick).
  do_browse_from()
	- Fix path checking to fix bad paths, escaping 
	  the operating directory, new function readable_dir() (David 
	  Benbennick).
  do_browser()
	- Fix incorrect path check for check_operating_dir() 
	  (David Benbennick).
	- Fix goto directory operating dir check and tilde expansion
	  (David Benbennick).
  open_file()
	- Fix FD leak with file load error (David Benbennick).
  add_open_file()
	- Revert the fix for the supposed minor logic error from before;
	  it was keeping some updates from happening when they should,
	  which was leading to segfaults with both multibuffer and view
	  mode on. (DLR; found by David Benbennick)
  save_history()
	- Fix nrealloc return value being ignored (David Benbennick).
- nano.c:
  do_char()
	- Remove unneeded check_statblank() (David Benbennick).
  do_int_spell_fix(), do_int_speller()
	- Fix crashes with mark position, current_x position, 
	  and edit_update args (David Benbennick).
  do_justify()
	- Unset KEEP_CUTBUFFER so nano won't crash with subsequent
	  ^K cuts and justifies (David Benbennick).
  do_mouse()
	- Fix the mouse code to work with lines longer than COLS and
	  with the proper positioning, including special characters
	  (David Benbennick).
  do_preserve_msg():
	- Unsplit error message into a single fprintf call (Jordi).
  main()
	- Call load_file with arg 0 for insert, as we aren't really
	  doing an insert, allows new_file() to run if we open a 